# ASCSA

./: .gitignore  INSTALLATION.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_hcrs_tests.py  setup.py  upload_reports.py  verify_installation.py  verify_storage.py
cli/: __init__.py  context.py  exit_codes.py  main.py  run.py
config/: policies.yaml  rules.yaml  thresholds.yaml
core/: __init__.py  cloud_uploader.py  contracts.py  emitter.py  orchestrator.py  storage_utils.py
engines/: __init__.py
engines/csce/: README.md  __init__.py  correlator.py  models.py  reporter.py
engines/hcrs/: OSV_INTEGRATION.md  README.md  __init__.py  cli.py  config_loader.py  javascript_analyzer.py  models.py  osv_scanner.py  python_analyzer.py  reporter.py  risk_engine.py  rule_loader.py  run.py  scanner.py  weighting.py
engines/sdda/: README.md  __init__.py  baseline_manager.py  comparators.py  database.py  drift_detector.py  git_drift_detector.py  models.py  run.py  security.py
engines/slga/: README.md  __init__.py  code_parser.py  database.py  detector.py  git_context.py  git_parser.py  graph.py  models.py  pipeline_scanner.py  reporter.py  run.py
examples/: cloud_upload_demo.py  csce_demo.py  hcrs_demo.py  sdda_demo.py  slga_commit_scan_demo.py  slga_demo.py
output/: formatter.py  json_report.py
tests/csce/: __init__.py  test_csce.py
tests/hcrs/: .gitkeep  TEST_SUMMARY.md  __init__.py  test_hcrs_advanced.py  test_hcrs_basic.py  test_hcrs_edgecases.py  test_osv_integration.py
tests/pipeline/: test_orchestrator.py
tests/sdda/: .gitkeep  TEST_SUMMARY.md  test_branch_comparison.py  test_git_drift.py  test_sdda.py  test_sdda_advanced.py  test_sdda_edgecases.py  test_sdda_synthetic_validation.py  test_security.py
(+7 files in other folders)
